# CarrinhoRC

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
arduino/CarrinhoRCFirmware/: CarrinhoRCFirmware.ino
backend/: camera_stream.py  carrinho_serial.py  server.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  styles.css
docker/: entrypoint.sh  run-system.sh
src/rover_bringup/: package.xml  setup.py
src/rover_bringup/launch/: rover.launch.py
src/rover_control/: package.xml  setup.py
src/rover_control/rover_control/: manual_control_node.py  telemetry_node.py  webcam_node.py
tools/: servoandesc.py
