<?xml version="1.0"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the CarrinhoRC rover.</description>
  <maintainer email="dev@example.com">CarrinhoRC</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rover_control</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
